Mantaflow crash: Baking data for domain type fluid on a plane. #74154

Closed
opened 2020-02-24 10:26:16 +01:00 by bekim@kingpixel.de · 17 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GTX 880

Blender Version
version: 2.83 (sub 4), 14856e149f

Short description of error
Baking data on Mantaflow plane.


Exact steps for others to reproduce the error
Creating Plane (shift + A), Scaling plane (S) Applying Fluid, Type- Domain, Domain Type Fluid and hitting Bake Data it closes the blende without any warning
{F8366468}T74154_1plane_extruded.blend T74154_1plane.blend
T74154calltrace.txt

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GTX 880 **Blender Version** version: 2.83 (sub 4), 14856e149ff5c225ffe5a4022794cd12f7632f71 **Short description of error** Baking data on Mantaflow plane. ``` ``` **Exact steps for others to reproduce the error** Creating Plane (shift + A), Scaling plane (S) Applying Fluid, Type- Domain, Domain Type Fluid and hitting Bake Data it closes the blende without any warning {[F8366468](https://archive.blender.org/developer/F8366468/T74154.blend)}[T74154_1plane_extruded.blend](https://archive.blender.org/developer/F8366483/T74154_1plane_extruded.blend) [T74154_1plane.blend](https://archive.blender.org/developer/F8366482/T74154_1plane.blend) [T74154calltrace.txt](https://archive.blender.org/developer/F8366514/T74154calltrace.txt)

Added subscriber: @kingpixel

Added subscriber: @kingpixel

Correction: Graphics card: GTX 1080

Correction: Graphics card: GTX 1080
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

I can reproduce both on 2.82 and 2.83.
Here is the file created when the crash happens:
blender.crash.txt

I can reproduce both on 2.82 and 2.83. Here is the file created when the crash happens: [blender.crash.txt](https://archive.blender.org/developer/F8366206/blender.crash.txt)

i did give a plane a thickness by going on edit mode and extruding and it doesn't crash anymore maybe because simple plain has in computer world 0 thickness, I hope this helps to fix the issue.

T74154_1plane_extruded.blend

T74154_1plane.blend

first have extruded and it works
second is a simple plane and it crashes

i did give a plane a thickness by going on edit mode and extruding and it doesn't crash anymore maybe because simple plain has in computer world 0 thickness, I hope this helps to fix the issue. [T74154_1plane_extruded.blend](https://archive.blender.org/developer/F8366483/T74154_1plane_extruded.blend) [T74154_1plane.blend](https://archive.blender.org/developer/F8366482/T74154_1plane.blend) first have extruded and it works second is a simple plane and it crashes
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Could you add a simple blend file too? Thanks!

Could you add a simple blend file too? Thanks!

In #74154#879270, @ankitm wrote:
Could you add a simple blend file too? Thanks!

T74154_1plane_extruded.blend

T74154_1plane.blend

first have extruded and it works
second is a simple plane and it crashes

> In #74154#879270, @ankitm wrote: > Could you add a simple blend file too? Thanks! [T74154_1plane_extruded.blend](https://archive.blender.org/developer/F8366483/T74154_1plane_extruded.blend) [T74154_1plane.blend](https://archive.blender.org/developer/F8366482/T74154_1plane.blend) first have extruded and it works second is a simple plane and it crashes
Ankit Meel changed title from Mantaflow to Mantaflow crash: Baking data for domain type fluid on a plane. 2020-02-24 15:49:06 +01:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

mds->fluid (fluid*) is NULL in manta_step, thus in uploadfluidsflow, thus in manta_get_phi_in(MANTA *): and then in MANTA::getPhiIn:
added trace in the post ^.

`mds->fluid` (`fluid*`) is NULL in `manta_step`, thus in `uploadfluidsflow`, thus in `manta_get_phi_in(MANTA *):` and then in `MANTA::getPhiIn:` added trace in the post ^.
Member

Added subscribers: @sebbas, @lichtwerk

Added subscribers: @sebbas, @lichtwerk
Member

@sebbas: I recall there where issues with zero volume domains, mind checking?

@sebbas: I recall there where issues with zero volume domains, mind checking?
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

mds->fluid is set to NULL in BKE_fluid_reallocate_fluid, because the min resolution is 0. However, the rest of the code cannot deal with the situation.

Also BKE_fluid_modifier_init returns a bool which probably indicates something like success. But the return value is never checked.

`mds->fluid` is set to `NULL` in `BKE_fluid_reallocate_fluid`, because the min resolution is `0`. However, the rest of the code cannot deal with the situation. Also `BKE_fluid_modifier_init` returns a `bool` which probably indicates something like `success`. But the return value is never checked.

This issue was referenced by 3bab9b4868

This issue was referenced by 3bab9b486876ea3d44889e8b6c72cc70aced446f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-03-20 10:44:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74154
No description provided.