Fix T74154: Mantaflow crash: Baking data for domain type fluid on a plane.

Added sanity check to prevent bakes from being triggered when there is no fluid object present.